@@ -1,5 +1,6 @@
 Changelog for GHCiD
 
+    #21, if you aren't waiting for any files, exit
 0.3.3
     #21, if the root file is missing, report an error
     #20, avoid an O(n^2) nub
